# mrfmap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CudaAutodetectCompute.cmake  mrfmap-config.cmake
config/: coffin_world_640.yaml
include/mrfmap/: GVDBCamera.h  GVDBCommon.cuh  GVDBImage.h  GVDBInference.h  GVDBMRFMap.h  GVDBMapLikelihoodEstimator.h  GVDBOctomapWrapper.h  GVDBParams.h  KeyframeSelector.h  Viewer.h
src/: GVDBCamera.cpp  GVDBImage.cpp  GVDBInference.cpp  GVDBMRFMap.cpp  GVDBMapLikelihoodEstimator.cpp  GVDBOctomapWrapper.cpp  GVDBPyModules.cpp  KeyframeSelector.cpp  Viewer.cpp  testMRFMapViewer.cpp
src/cuda/: gvdbhelper.cu  gvdbkernels.cu
src/shaders/: point_voxels.geom  point_voxels.vert  pointcloud.frag  pointcloud.vert
